--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "aws/aws-sdk-php": "~3.0",
         "barryvdh/laravel-cors": "^1.0",
         "fideloper/proxy": "^4.2",
         "guzzlehttp/guzzle": "^6.3",
