--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "laravel/tinker": "^2.0",
         "orangehill/iseed": "^2.6",
         "prettus/l5-repository": "^2.6",
-        "spatie/laravel-fractal": "^5.7"
+        "sleiman/airtable-php": "^2.3",
+        "spatie/laravel-fractal": "^5.7",
+        "tapp/laravel-airtable": "^0.13.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
